...
        
        viewModel.success
            .drive(onNext: { [unowned self] (value: Bool) in
                if value {
                    self.removeSpinner(spinner: self.spinnerView)
                    // this is here soley for debugging purposes
                    self.presentMessage(title: "Success",
                                        message: "Check your email for instructions to reset your password")
                }
            }).disposed(by: disposeBag)
        
        viewModel.errorMsg
            .drive(onNext: { [unowned self] (value) in
...
